2011-12-23  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/i386/i686/multiarch/wcscpy-ssse3.S: Fix wrong copying
	processing for last bytes.

2011-08-06  Bruno Haible  <bruno@clisp.org>

	[BZ #13061]
	* iconvdata/cp1258.c (comp_table_data): Combine U+00A8 U+0301 to
	U+0385, not to U+1FEE.

	[BZ #13062]
	* iconvdata/tcvn5712-1.c (comp_table_data): Remove useless and wrong
	entry for U+00A5 U+0301.

2011-12-22  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13166]
	* inet/getnameinfo.c (getnameinfo): Return EAI_OVERFLOW if the
	buffer for the output is too small.

	* sysdeps/i386/fpu/bits/fenv.h [__SSE_MATH__]: Add feraiseexcept
	optimization.

	[BZ #13185]
	* sysdeps/i386/fpu/fgetexcptflg.c (__fegetexceptflag): Also return
	SSE flags if possible.

2011-12-22  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	[BZ #13540]
	* sysdeps/i386/i686/multiarch/strcpy-ssse3.S: Fix wrong copying
	processing for last bytes.

2011-12-22  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/Makefile (syscall-list-variants)
	(syscall-list-default-options, syscall-list-default-condition)
	(syscall-list-includes): Define.
	($(objpfx)syscall-%.h $(objpfx)syscall-%.d): Support arbitrary
	list of ABIs and options and #if conditions for each ABI.  Do not
	handle common syscalls between ABIs specially.
	* sysdeps/unix/sysv/linux/powerpc/Makefile (64bit-predefine):
	Remove.
	(syscall-list-variants, syscall-list-32bit-options)
	(syscall-list-32bit-condition, syscall-list-64bit-options)
	(syscall-list-64bit-condition): Define.
	* sysdeps/unix/sysv/linux/s390/Makefile (64bit-predefine): Remove.
	(syscall-list-variants, syscall-list-32bit-options)
	(syscall-list-32bit-condition, syscall-list-64bit-options)
	(syscall-list-64bit-condition): Define.
	* sysdeps/unix/sysv/linux/sparc/Makefile (64bit-predefine):
	Remove.
	(syscall-list-variants, syscall-list-32bit-options)
	(syscall-list-32bit-condition, syscall-list-64bit-options)
	(syscall-list-64bit-condition): Define.